fix: make checkboxes and radio selection visible

--- a/src/components/FieldSelector/FieldSelector.module.css
+++ b/src/components/FieldSelector/FieldSelector.module.css
@@ -15,6 +15,10 @@
   padding: 0 16px;
 }
 
+.field-selector-wrapper-selected {
+  border-color: var(--button-color);
+}
+
 .field-selector-option {
   all: unset;
   margin: 0;
